pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-remember
  labels:
    app: nginx
    kazan: city
spec:
  containers:
    - image: nginx:1.13
      name: nginx
